--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -110,7 +110,7 @@ items:
         href: search-dotnet-mgmt-sdk-migration.md
     - name: Uppgradera REST-API:et
       href: search-api-migration.md
-  - name: Utforma index
+  - name: Designa index
     items:
     - name: Skapa ett grundläggande index
       href: search-what-is-an-index.md
@@ -136,7 +136,7 @@ items:
       href: search-example-adventureworks-modeling.md
     - name: Modellera flernivåfasetter
       href: search-example-adventureworks-multilevel-faceting.md
-  - name: Indexeringsdata
+  - name: Läsa in data
     items:
     - name: Översikt över dataimport
       href: search-what-is-data-import.md
@@ -190,7 +190,7 @@ items:
       href: cognitive-search-concept-troubleshooting.md
     - name: Dokumentationslänkar
       href: cognitive-search-resources-documentation.md
-  - name: Köra frågor mot data
+  - name: Söka i data
     items:
     - name: Skapa en grundläggande fråga
       href: search-query-overview.md
@@ -204,7 +204,7 @@ items:
       href: search-query-simple-examples.md
     - name: Frågeexempel (fullständig Lucene)
       href: search-query-lucene-examples.md
-  - name: Hanteringsresultat
+  - name: Hantera resultat
     items:
     - name: Sidrelaterade funktioner
       href: search-pagination-page-layout.md
@@ -307,9 +307,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: a38dd0b739b5f34826798370b4ffa4ad84cc525d
-ms.sourcegitcommit: f863ed1ba25ef3ec32bd188c28153044124cacbc
+ms.openlocfilehash: 786dd21f4f8783dee3739beaa4c916793cfc7404
+ms.sourcegitcommit: fcb674cc4e43ac5e4583e0098d06af7b398bd9a9
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "56299487"
+ms.lasthandoff: 02/18/2019
+ms.locfileid: "56337867"
