--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -7,71 +7,77 @@ items:
     href: introduction.md
 - name: Snabbstarter
   items:
-  - name: SQL
-    items:
-    - name: .NET
-      href: create-sql-api-dotnet.md
-    - name: .NET-förhandsgranskning
-      href: create-sql-api-dotnet-preview.md
-    - name: Java
-      href: create-sql-api-java.md
-    - name: Node.js
-      href: create-sql-api-nodejs.md
-    - name: Python
-      href: create-sql-api-python.md
-    - name: Xamarin
-      href: create-sql-api-xamarin-dotnet.md
-  - name: API för Azure Cosmos DB för MongoDB
-    items:
-    - name: .NET
-      href: create-mongodb-dotnet.md
-    - name: Java
-      href: create-mongodb-java.md
-    - name: Node.js
-      href: create-mongodb-nodejs.md
-    - name: Python
-      href: create-mongodb-flask.md
-    - name: Xamarin
-      href: create-mongodb-xamarin.md
-    - name: Golang
-      href: create-mongodb-golang.md
-  - name: Gremlin
-    items:
-    - name: Gremlin-konsol
-      href: create-graph-gremlin-console.md
-    - name: .NET
-      href: create-graph-dotnet.md
-    - name: Java
-      href: create-graph-java.md
-    - name: Node.js
-      href: create-graph-nodejs.md
-    - name: Python
-      href: create-graph-python.md
-    - name: PHP
-      href: create-graph-php.md
-  - name: Cassandra
-    items:
-    - name: .NET
-      href: create-cassandra-dotnet.md
-    - name: Java
-      href: create-cassandra-java.md
-    - name: Node.js
-      href: create-cassandra-nodejs.md
-    - name: Python
-      href: create-cassandra-python.md
-  - name: Tabell
-    items:
-    - name: .NET
-      href: create-table-dotnet.md
-    - name: Java
-      href: create-table-java.md
-    - name: Node.js
-      href: create-table-nodejs.md
-    - name: Python
-      href: create-table-python.md
+  - name: .NET
+    href: create-sql-api-dotnet.md
+  - name: .NET-förhandsgranskning
+    href: create-sql-api-dotnet-preview.md
+  - name: Java
+    href: create-sql-api-java.md
+  - name: Node.js
+    href: create-sql-api-nodejs.md
+  - name: Python
+    href: create-sql-api-python.md
+  - name: Xamarin
+    href: create-sql-api-xamarin-dotnet.md
   expanded: true
+- name: Självstudier
+  items:
+  - name: 1 – Skapa konto
+    items:
+    - name: Skapa en konsolapp
+      items:
+      - name: .NET
+        href: sql-api-get-started.md
+      - name: .NET-förhandsgranskning
+        href: sql-api-dotnet-get-started-preview.md
+      - name: .NET Core
+        href: sql-api-dotnetcore-get-started.md
+      - name: .NET Core-förhandsgranskning
+        href: sql-api-dotnet-core-get-started-preview.md
+      - name: Java
+        href: sql-api-java-get-started.md
+      - name: Async Java
+        href: sql-api-async-java-get-started.md
+      - name: Node.js
+        href: sql-api-nodejs-get-started.md
+    - name: Bygga en webbapp
+      items:
+      - name: .NET
+        href: sql-api-dotnet-application.md
+      - name: .NET-förhandsgranskning
+        href: sql-api-dotnet-application-preview.md
+      - name: Java
+        href: sql-api-java-application.md
+      - name: Node.js
+        href: sql-api-nodejs-application.md
+      - name: Xamarin
+        href: mobile-apps-with-xamarin.md
+  - name: 2 – Migrera data
+    href: import-data.md
+  - name: 3 – Frågedata
+    href: tutorial-query-sql-api.md
+  - name: 4 – Distribuera data lokalt
+    href: tutorial-global-distribution-sql-api.md
+- name: Exempel
+  items:
+  - name: .NET-exempel
+    href: sql-api-dotnet-samples.md
+  - name: Java-exempel
+    href: sql-api-java-samples.md
+  - name: Async Java-exempel
+    href: sql-api-async-java-samples.md
+  - name: Node.js-exempel
+    href: sql-api-nodejs-samples.md
+  - name: Python-exempel
+    href: sql-api-python-samples.md
+  - name: PowerShell
+    href: powershell-samples.md
+  - name: Azure CLI
+    href: cli-samples.md
 - name: Begrepp
   items:
+  - name: Modelldokumentdata
+    href: modeling-data.md
   - name: Global distribution
     items:
     - name: Översikt
@@ -190,122 +196,28 @@ items:
       href: online-backup-and-restore.md
     - name: Efterlevnad
       href: compliance.md
-- name: API:er för flera modeller
+- name: Cassandra, MongoDB och andra API:er
   items:
-  - name: API för SQL
-    items:
-    - name: Modelldokumentdata
-      href: modeling-data.md
-    - name: Självstudier
-      items:
-      - name: 1 – Skapa konto
-        items:
-        - name: Skapa en konsolapp
-          items:
-          - name: .NET
-            href: sql-api-get-started.md
-          - name: .NET-förhandsgranskning
-            href: sql-api-dotnet-get-started-preview.md
-          - name: .NET Core
-            href: sql-api-dotnetcore-get-started.md
-          - name: .NET Core-förhandsgranskning
-            href: sql-api-dotnet-core-get-started-preview.md
-          - name: Java
-            href: sql-api-java-get-started.md
-          - name: Async Java
-            href: sql-api-async-java-get-started.md
-          - name: Node.js
-            href: sql-api-nodejs-get-started.md
-        - name: Bygga en webbapp
-          items:
-          - name: .NET
-            href: sql-api-dotnet-application.md
-          - name: .NET-förhandsgranskning
-            href: sql-api-dotnet-application-preview.md
-          - name: Java
-            href: sql-api-java-application.md
-          - name: Node.js
-            href: sql-api-nodejs-application.md
-          - name: Xamarin
-            href: mobile-apps-with-xamarin.md
-      - name: 2 – Migrera data
-        href: import-data.md
-      - name: 3 – Frågedata
-        href: tutorial-query-sql-api.md
-      - name: 4 – Distribuera data lokalt
-        href: tutorial-global-distribution-sql-api.md
-    - name: Exempel
-      items:
-      - name: .NET-exempel
-        href: sql-api-dotnet-samples.md
-      - name: Java-exempel
-        href: sql-api-java-samples.md
-      - name: Async Java-exempel
-        href: sql-api-async-java-samples.md
-      - name: Node.js-exempel
-        href: sql-api-nodejs-samples.md
-      - name: Python-exempel
-        href: sql-api-python-samples.md
-      - name: PowerShell
-        href: powershell-samples.md
-      - name: Azure CLI
-        href: cli-samples.md
-    - name: Instruktionsguider
-      items:
-      - name: Justera prestanda för frågor
-        href: sql-api-query-metrics.md
-      - name: Datatyper
-        items:
-        - name: DateTime
-          href: working-with-dates.md
-        - name: Geospatial
-          href: geospatial.md
-        - name: Massexecutor – .NET-bibliotek
-          href: bulk-executor-dot-net.md
-        - name: Massexecutor – Java-bibliotek
-          href: bulk-executor-java.md
-      - name: Java Development
-        items:
-        - name: Använda Spring Boot Starter
-          href: /java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db
-        - name: Använda API för Spring Data Apache Cassandra
-          href: /java/azure/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db
-        - name: Använda Spring Data Gremlin Starter
-          href: /java/azure/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db
-        - name: Använda API för Spring Data MongoDB
-          href: /java/azure/spring-framework/configure-spring-data-mongodb-with-cosmos-db
-    - name: Referens
-      items:
-      - name: .NET
-        href: sql-api-sdk-dotnet.md
-      - name: .NET Core
-        href: sql-api-sdk-dotnet-core.md
-      - name: Bibliotek för .NET-ändringsfeed
-        href: sql-api-sdk-dotnet-changefeed.md
-      - name: Bibliotek för .NET-massexecutor
-        href: sql-api-sdk-bulk-executor-dot-net.md
-      - name: Java
-        href: sql-api-sdk-java.md
-      - name: Bibliotek för Java-massexecutor
-        href: sql-api-sdk-bulk-executor-java.md
-      - name: Async Java
-        href: sql-api-sdk-async-java.md
-      - name: Node.js
-        href: sql-api-sdk-node.md
-      - name: Python
-        href: sql-api-sdk-python.md
-      - name: REST
-        href: /rest/api/cosmos-db/
-      - name: REST-resursprovider
-        href: /rest/api/cosmos-db-resource-provider/
-      - name: Resource Manager-mall
-        href: /azure/templates/microsoft.documentdb/databaseaccounts
   - name: API för Azure Cosmos DB för MongoDB
     items:
     - name: Introduktion
       href: mongodb-introduction.md
     - name: Protokollstöd för Wire
       href: mongodb-feature-support.md
+    - name: Snabbstarter
+      items:
+      - name: .NET
+        href: create-mongodb-dotnet.md
+      - name: Java
+        href: create-mongodb-java.md
+      - name: Node.js
+        href: create-mongodb-nodejs.md
+      - name: Python
+        href: create-mongodb-flask.md
+      - name: Xamarin
+        href: create-mongodb-xamarin.md
+      - name: Golang
+        href: create-mongodb-golang.md
     - name: Självstudier
       items:
       - name: 1 – Skapa konto
@@ -350,12 +262,29 @@ items:
         href: mongodb-time-to-live.md
       - name: Hantera dataindexering
         href: mongodb-indexing.md
+      - name: Lagra och hantera Spring Data
+        href: /java/azure/spring-framework/configure-spring-data-mongodb-with-cosmos-db
+        maintainContext: true
   - name: Gremlin-API
     items:
     - name: Introduktion
       href: graph-introduction.md
     - name: Protokollstöd för Wire
       href: gremlin-support.md
+    - name: Snabbstarter
+      items:
+      - name: Gremlin-konsol
+        href: create-graph-gremlin-console.md
+      - name: .NET
+        href: create-graph-dotnet.md
+      - name: Java
+        href: create-graph-java.md
+      - name: Node.js
+        href: create-graph-nodejs.md
+      - name: Python
+        href: create-graph-python.md
+      - name: PHP
+        href: create-graph-php.md
     - name: Självstudier
       items:
       - name: 1– Frågedata
@@ -366,12 +295,25 @@ items:
         href: bulk-executor-graph-dotnet.md
       - name: Partitionering av diagramdata
         href: graph-partitioning.md
+      - name: Lagra och hantera Spring Data
+        href: /java/azure/spring-framework/configure-spring-data-gremlin-java-app-with-cosmos-db
+        maintainContext: true
   - name: Cassandra-API
     items:
     - name: Introduktion
       href: cassandra-introduction.md
     - name: Protokollstöd för Wire
       href: cassandra-support.md
+    - name: Snabbstarter
+      items:
+      - name: .NET
+        href: create-cassandra-dotnet.md
+      - name: Java
+        href: create-cassandra-java.md
+      - name: Node.js
+        href: create-cassandra-nodejs.md
+      - name: Python
+        href: create-cassandra-python.md
     - name: Självstudier
       items:
       - name: 1 – Skapa konto och databas
@@ -382,32 +324,47 @@ items:
         href: cassandra-api-query-data.md
       - name: 4 – Migrera data
         href: cassandra-import-data.md
-    - name: Cassandra och Spark
+    - name: Instruktionsguider
       items:
-      - name: Introduktion
-        href: cassandra-spark-generic.md
-      - name: Ansluta med Databricks
-        href: cassandra-spark-databricks.md
-      - name: Ansluta med HDInsight
-        href: cassandra-spark-hdinsight.md
-      - name: Skapa keyspace och tabell
-        href: cassandra-spark-ddl-ops.md
-      - name: Infoga data
-        href: cassandra-spark-create-ops.md
-      - name: Läsa data
-        href: cassandra-spark-read-ops.md
-      - name: Upserta data
-        href: cassandra-spark-upsert-ops.md
-      - name: Ta bort data
-        href: cassandra-spark-delete-ops.md
-      - name: Sammansättningsåtgärder
-        href: cassandra-spark-aggregation-ops.md
-      - name: Kopiera tabelldata
-        href: cassandra-spark-table-copy-ops.md
+      - name: Lagra och hantera Spring Data
+        href: /java/azure/spring-framework/configure-spring-data-apache-cassandra-with-cosmos-db
+        maintainContext: true
+      - name: Cassandra och Spark
+        items:
+        - name: Introduktion
+          href: cassandra-spark-generic.md
+        - name: Ansluta med Databricks
+          href: cassandra-spark-databricks.md
+        - name: Ansluta med HDInsight
+          href: cassandra-spark-hdinsight.md
+        - name: Skapa keyspace och tabell
+          href: cassandra-spark-ddl-ops.md
+        - name: Infoga data
+          href: cassandra-spark-create-ops.md
+        - name: Läsa data
+          href: cassandra-spark-read-ops.md
+        - name: Upserta data
+          href: cassandra-spark-upsert-ops.md
+        - name: Ta bort data
+          href: cassandra-spark-delete-ops.md
+        - name: Sammansättningsåtgärder
+          href: cassandra-spark-aggregation-ops.md
+        - name: Kopiera tabelldata
+          href: cassandra-spark-table-copy-ops.md
   - name: Tabell-API
     items:
     - name: Introduktion
       href: table-introduction.md
+    - name: Snabbstarter
+      items:
+      - name: .NET
+        href: create-table-dotnet.md
+      - name: Java
+        href: create-table-java.md
+      - name: Node.js
+        href: create-table-nodejs.md
+      - name: Python
+        href: create-table-python.md
     - name: Självstudier
       items:
       - name: 1 – Skapa konto
@@ -418,12 +375,6 @@ items:
         href: tutorial-query-table.md
       - name: 4 – Distribuera data lokalt
         href: tutorial-global-distribution-table.md
-    - name: Instruktionsguider
-      items:
-      - name: Skapa appar med tabell-API
-        href: table-support.md
-      - name: Designguide för tabellagring
-        href: table-storage-design-guide.md
     - name: Exempel
       items:
       - name: .NET
@@ -442,6 +393,12 @@ items:
         href: table-storage-how-to-use-ruby.md
       - name: F#
         href: https://docs.microsoft.com/dotnet/articles/fsharp/using-fsharp-on-azure/table-storage
+    - name: Instruktionsguider
+      items:
+      - name: Skapa appar med tabell-API
+        href: table-support.md
+      - name: Designguide för tabellagring
+        href: table-storage-design-guide.md
     - name: Referens
       items:
       - name: .NET
@@ -543,10 +500,18 @@ items:
       href: https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-cosmosdb
   - name: Konfigurera pipeline för Azure DevOps CI/CD
     href: tutorial-setup-ci-cd.md
+  - name: Datatyper
+    items:
+    - name: DateTime
+      href: working-with-dates.md
+    - name: Geospatial
+      href: geospatial.md
   - name: Bästa praxis
     items:
     - name: Prestandatips
       items:
+      - name: Justera prestanda för frågor
+        href: sql-api-query-metrics.md
       - name: Prestandatips för .NET SDK
         href: performance-tips.md
       - name: Prestandatips för Java SDK
@@ -586,7 +551,8 @@ items:
     - name: Azure Event Hubs och Azure Storage
       href: https://github.com/hdinsight/hdinsight-storm-examples/blob/master/IotExample/README.md
     - name: Använd Spring Boot Starter
-      href: https://docs.microsoft.com/java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?toc=/azure/cosmos-db/toc.json
+      href: /java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db
+      maintainContext: true
     - name: Lambda-arkitektur
       href: lambda-architecture.md
     - name: Azure Databricks (Spark-anslutningsapp)
@@ -599,10 +565,40 @@ items:
     items:
     - name: Om bibliotek för massexecutor
       href: bulk-executor-overview.md
+    - name: Massexecutor – .NET-bibliotek
+      href: bulk-executor-dot-net.md
+    - name: Massexecutor – Java-bibliotek
+      href: bulk-executor-java.md
   - name: Felsöka
     items:
     - name: Felsöka Java Async SDK
       href: troubleshoot-java-async-sdk.md
+- name: Referens
+  items:
+  - name: .NET
+    href: sql-api-sdk-dotnet.md
+  - name: .NET Core
+    href: sql-api-sdk-dotnet-core.md
+  - name: Bibliotek för .NET-ändringsfeed
+    href: sql-api-sdk-dotnet-changefeed.md
+  - name: Bibliotek för .NET-massexecutor
+    href: sql-api-sdk-bulk-executor-dot-net.md
+  - name: Java
+    href: sql-api-sdk-java.md
+  - name: Bibliotek för Java-massexecutor
+    href: sql-api-sdk-bulk-executor-java.md
+  - name: Async Java
+    href: sql-api-sdk-async-java.md
+  - name: Node.js
+    href: sql-api-sdk-node.md
+  - name: Python
+    href: sql-api-sdk-python.md
+  - name: REST
+    href: /rest/api/cosmos-db/
+  - name: REST-resursprovider
+    href: /rest/api/cosmos-db-resource-provider/
+  - name: Resource Manager-mall
+    href: /azure/templates/microsoft.documentdb/databaseaccounts
 - name: Resurser
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
@@ -631,9 +627,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: 72a6dced29f09379453d0e33131f78e875b2c9f2
-ms.sourcegitcommit: 301128ea7d883d432720c64238b0d28ebe9aed59
+ms.openlocfilehash: f2f061aebd996f62f793ba515f574c8a3748b87f
+ms.sourcegitcommit: 9aa9552c4ae8635e97bdec78fccbb989b1587548
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/13/2019
-ms.locfileid: "56163504"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "56429128"
