--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -32,6 +32,8 @@ items:
     href: logs-and-metrics.md
   - name: Regelbearbetningslogik
     href: rule-processing.md
+  - name: Tjänsttaggar
+    href: service-tags.md
 - name: Instruktionsguider
   items:
   - name: Distribuera med hjälp av en mall
@@ -70,9 +72,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/azure-firewall/
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: d753f52994647805a1914bca2c39707cf701f294
-ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
+ms.openlocfilehash: f7867f898cd85e5255fbf3a8d216cac3be85a890
+ms.sourcegitcommit: 75fef8147209a1dcdc7573c4a6a90f0151a12e17
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/31/2019
-ms.locfileid: "55468320"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "56456545"
