--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -160,6 +160,8 @@ items:
         href: azure-to-azure-how-to-enable-replication-ade-vms.md
       - name: Aktivera Azure till Azure-replikering för virtuella S2D-datorer
         href: azure-to-azure-how-to-enable-replication-s2d-vms.md
+      - name: Uteslut diskar
+        href: azure-to-azure-exclude-disks.md
       - name: Skydda virtuella Azure-datorer igen efter en redundansväxling
         href: azure-to-azure-how-to-reprotect.md
       - name: Konfigurera haveriberedskap för virtuella Azure-datorer efter migrering till Azure
@@ -460,9 +462,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=site-recovery
-ms.openlocfilehash: 0b9c7300737ca91508111de9e414249441ba0916
-ms.sourcegitcommit: 943af92555ba640288464c11d84e01da948db5c0
+ms.openlocfilehash: 49cdd301f87db09e4950339e1925ac313a8cdd33
+ms.sourcegitcommit: 75fef8147209a1dcdc7573c4a6a90f0151a12e17
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/09/2019
-ms.locfileid: "55980228"
+ms.lasthandoff: 02/20/2019
+ms.locfileid: "56454794"
