--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -53,6 +53,7 @@ items:
       - name: Xamarin
         href: mobile-apps-with-xamarin.md
   - name: 2 – Migrera data
+    displayName: import
     href: import-data.md
   - name: 3 – Frågedata
     href: tutorial-query-sql-api.md
@@ -76,15 +77,16 @@ items:
     href: cli-samples.md
 - name: Begrepp
   items:
-  - name: Modelldokumentdata
-    href: modeling-data.md
   - name: Global distribution
     items:
     - name: Översikt
+      displayName: replication, replicate, geo distribution
       href: distribute-data-globally.md
     - name: Konsekvensnivåer
+      displayName: session, consistency prefix, strong, eventual, bounded staleness
       href: consistency-levels.md
     - name: Välja rätt konsekvensnivå
+      displayName: session, consistency prefix, strong, eventual, bounded staleness
       href: consistency-levels-choosing.md
     - name: Konsekvensnivåer och API:er för Azure Cosmos DB
       href: consistency-levels-across-apis.md
@@ -93,8 +95,10 @@ items:
     - name: Hög tillgänglighet
       href: high-availability.md
     - name: Skala etablerat dataflöde globalt
+      displayName: request units, RUs, RU
       href: scaling-throughput.md
     - name: Konflikttyper och matchningsprinciper
+      displayName: last write wins, custom
       href: conflict-resolution-policies.md
     - name: Global distribution
       href: global-dist-under-the-hood.md
@@ -111,26 +115,36 @@ items:
   - name: Etablerat dataflöde
     items:
     - name: Enheter för programbegäran
+      displayName: RUs, RU
       href: request-units.md
     - name: Etablera dataflöde på containrar och databaser
+      displayName: request units, RUs, RU, limits, database throughput, shared throughput, container throughput
       href: set-throughput.md
   - name: Arbeta med ett Azure Cosmos-konto
     href: account-overview.md
   - name: Containrar och objekt
     items:
     - name: Arbeta med databaser, containrar och objekt
+      displayName: collection, document
       href: databases-containers-items.md
     - name: SQL-språkreferens
+      displayName: collection, document
       href: sql-api-query-reference.md
     - name: SQL-frågeexempel
+      displayName: collection, document, order by, where, top, value, aggregate, between, scalar, join, count, contains
       href: how-to-sql-query.md
+    - name: Modelldokumentdata
+      displayName: document
+      href: modeling-data.md
     - name: Indexering
       items:
       - name: Översikt
         href: index-overview.md
       - name: Indexprincip
+        displayName: consistent, none
         href: index-policy.md
       - name: Indextyper
+        displayName: hash, range, spatial
         href: index-types.md
       - name: Indexsökvägar
         href: index-paths.md
@@ -143,8 +157,10 @@ items:
       - name: Ändringsflödesprocessor
         href: change-feed-processor.md
       - name: Utlösa Azure Functions
+        displayName: change feed
         href: change-feed-functions.md
     - name: Time to live
+      displayName: delete, delete data, ttl
       href: time-to-live.md
     - name: Unika nyckelvillkor
       href: unique-keys.md
@@ -165,6 +181,7 @@ items:
     - name: Förstå fakturan
       href: understand-your-bill.md
     - name: Optimera kostnader för etablerat dataflöde
+      displayName: request units, RUs, RU
       href: optimize-cost-throughput.md
     - name: Optimera kostnader för frågor
       href: optimize-cost-queries.md
@@ -185,6 +202,7 @@ items:
     - name: Datakryptering
       href: database-encryption-at-rest.md
     - name: Säker åtkomst till data
+      displayName: master key, resource token, users, roles
       href: secure-access-to-data.md
     - name: IP-brandvägg
       href: firewall-support.md
@@ -241,6 +259,7 @@ items:
         - name: Node.js och React-app
           href: tutorial-develop-mongodb-react.md
       - name: 2 – Migrera data
+        displayName: import
         href: https://docs.microsoft.com/azure/dms/tutorial-mongodb-cosmos-db?toc=/azure/cosmos-db/toc.json
       - name: 3 – Frågedata
         href: tutorial-query-mongodb.md
@@ -257,6 +276,7 @@ items:
       - name: Ansluta med Mongoose
         href: mongodb-mongoose.md
       - name: Distribuera läsningar globalt
+        displayName: read preference
         href: mongodb-readpreference.md
       - name: TTL-värde – MongoDB
         href: mongodb-time-to-live.md
@@ -266,6 +286,7 @@ items:
         href: /java/azure/spring-framework/configure-spring-data-mongodb-with-cosmos-db
         maintainContext: true
   - name: Gremlin-API
+    displayName: graph, graph database
     items:
     - name: Introduktion
       href: graph-introduction.md
@@ -323,6 +344,7 @@ items:
       - name: 3 – Frågedata
         href: cassandra-api-query-data.md
       - name: 4 – Migrera data
+        displayName: import
         href: cassandra-import-data.md
     - name: Instruktionsguider
       items:
@@ -370,6 +392,7 @@ items:
       - name: 1 – Skapa konto
         href: tutorial-develop-table-dotnet.md
       - name: 2 – Migrera data
+        displayName: import
         href: table-import.md
       - name: 3 – Frågedata
         href: tutorial-query-table.md
@@ -423,6 +446,7 @@ items:
     - name: Konfigurera flera original
       href: how-to-multi-master.md
     - name: Hantera konsekvensnivåer
+      displayName: session, consistency prefix, strong, eventual, bounded staleness
       href: how-to-manage-consistency.md
     - name: Implementera anpassad synkronisering
       href: how-to-custom-synchronization.md
@@ -431,8 +455,10 @@ items:
   - name: Etablerat dataflöde
     items:
     - name: Etablera ett dataflöde på en container
+      displayName: request units, RUs, RU, collection level
       href: how-to-provision-container-throughput.md
     - name: Etablera ett dataflöde på en databas
+      displayName: request units, RUs, RU, shared throughput, database level
       href: how-to-provision-database-throughput.md
   - name: Arbeta med containrar och objekt
     items:
@@ -441,6 +467,7 @@ items:
     - name: Fråga en container
       href: how-to-query-container.md
     - name: Ställ in TTL (Time To Live)
+      displayName: delete, delete data, ttl
       href: how-to-time-to-live.md
     - name: Arbeta med data med hjälp av Azure Storage Explorer
       href: storage-explorer.md
@@ -627,9 +654,9 @@ items:
       href: use-cases.md
     - name: Appar för sociala medier
       href: social-media-apps.md
-ms.openlocfilehash: f2f061aebd996f62f793ba515f574c8a3748b87f
-ms.sourcegitcommit: 9aa9552c4ae8635e97bdec78fccbb989b1587548
+ms.openlocfilehash: f1f36d86466f93c0acac30364ba648391fb03095
+ms.sourcegitcommit: a4efc1d7fc4793bbff43b30ebb4275cd5c8fec77
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "56429128"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56652526"
