--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -9,18 +9,8 @@ items:
     href: azure-netapp-files-understand-storage-hierarchy.md
 - name: Snabbstarter
   items:
-  - name: Registrera dig för Azure NetApp Files
-    href: azure-netapp-files-register.md
-  - name: Skapa ett NetApp-konto
-    href: azure-netapp-files-create-netapp-account.md
-  - name: Konfigurera en kapacitetspool
-    href: azure-netapp-files-set-up-capacity-pool.md
-  - name: Delegera ett undernät till Azure NetApp Files
-    href: azure-netapp-files-delegate-subnet.md
-  - name: Skapa en volym för Azure NetApp Files
-    href: azure-netapp-files-create-volumes.md
-  - name: Konfigurera exportprincipen för en volym (valfritt)
-    href: azure-netapp-files-configure-export-policy.md
+  - name: Konfigurera Azure NetApp Files och skapa en volym
+    href: azure-netapp-files-quickstart-set-up-account-create-volumes.md
 - name: Begrepp
   items:
   - name: Tjänstnivåer för Azure NetApp Files
@@ -31,6 +21,18 @@ items:
     href: azure-netapp-files-metrics.md
 - name: Instruktionsguider
   items:
+  - name: Registrera för Azure NetApp Files
+    href: azure-netapp-files-register.md
+  - name: Skapa ett NetApp-konto
+    href: azure-netapp-files-create-netapp-account.md
+  - name: Konfigurera en kapacitetspool
+    href: azure-netapp-files-set-up-capacity-pool.md
+  - name: Delegera ett undernät till Azure NetApp Files
+    href: azure-netapp-files-delegate-subnet.md
+  - name: Skapa en volym för Azure NetApp Files
+    href: azure-netapp-files-create-volumes.md
+  - name: Konfigurera exportprincipen för en volym
+    href: azure-netapp-files-configure-export-policy.md
   - name: Hantera volymer
     href: azure-netapp-files-manage-volumes.md
   - name: Montera eller demontera en volym för virtuella datorer
@@ -49,9 +51,9 @@ items:
     href: https://docs.microsoft.com/rest/api/netapp/
   - name: Resource Manager-mall
     href: /azure/templates/microsoft.netapp/allversions
-ms.openlocfilehash: 3da297718a3369604feda971cd8c2499a2454b72
-ms.sourcegitcommit: 9aa9552c4ae8635e97bdec78fccbb989b1587548
+ms.openlocfilehash: 99091c5e5e9a991508c9eb915c8003de60404ae8
+ms.sourcegitcommit: 7723b13601429fe8ce101395b7e47831043b970b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "56430156"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56587420"
