--- a/articles/cognitive-services/Custom-Vision-Service/toc.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/toc.yml
@@ -49,6 +49,8 @@ items:
     href: rest-api-tutorial.md
   - name: Exportera eller ta bort kontodata
     href: ./export-delete-data.md
+  - name: Flytta projektet med den begränsade utvärderingsversionen till Azure
+    href: ./move-your-project-to-azure.md
 - name: Referens
   items:
   - name: API för Custom Vision Training
@@ -85,9 +87,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/?products=cognitive-services
   - name: Viktig information
     href: release-notes.md
-ms.openlocfilehash: 3bfe71ad288068189f0214b06153460dd20c0ba9
-ms.sourcegitcommit: 415742227ba5c3b089f7909aa16e0d8d5418f7fd
+ms.openlocfilehash: 963500c7df4cd3de39f23ce9e620893089050125
+ms.sourcegitcommit: a4efc1d7fc4793bbff43b30ebb4275cd5c8fec77
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/06/2019
-ms.locfileid: "55766137"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56652203"
