--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -6,15 +6,9 @@ items:
   - name: Vad är tjänsten Azure Machine Learning?
     displayName: AML services overview
     href: overview-what-is-azure-ml.md
-  - name: Så här fungerar tjänsten
-    displayName: architecture concepts definitions
-    href: concept-azure-machine-learning-architecture.md
-  - name: Vad hände med Workbench?
+  - name: Vad har hänt med Workbench?
     displayName: desktop ui Workbench upgrade update transfer
     href: overview-what-happened-to-workbench.md
-  - name: Viktig information
-    displayName: what's new issues bugs
-    href: azure-machine-learning-release-notes.md
   expanded: true
 - name: Snabbstarter
   items:
@@ -46,6 +40,9 @@ items:
   href: samples-notebooks.md
 - name: Begrepp
   items:
+  - name: Så här fungerar tjänsten
+    displayName: architecture concepts definitions
+    href: concept-azure-machine-learning-architecture.md
   - name: Automatiserad maskininlärning
     displayName: automl, auto ml
     href: concept-automated-ml.md
@@ -64,6 +61,8 @@ items:
       href: how-to-manage-workspace.md
     - name: Använda en Resource Manager-mall
       href: how-to-create-workspace-template.md
+    - name: Hantera användare och roller
+      href: how-to-assign-roles.md
   - name: Konfigurera utvecklingsmiljön 
     items:
     - name: Konfigurera utvecklingsmiljöer
@@ -97,7 +96,7 @@ items:
       href: how-to-train-ml-models.md
     - name: Använda PyTorch
       href: how-to-train-pytorch.md
-    - name: Använda TensorFlow
+    - name: Använda TensorFlow och Keras
       href: how-to-train-tensorflow.md
     - name: Justering av hyperparametrar
       displayName: parameter
@@ -172,6 +171,9 @@ items:
     href: https://aka.ms/aml-monitoring-sdk
 - name: Resurser
   items:
+  - name: Viktig information
+    displayName: what's new issues bugs
+    href: azure-machine-learning-release-notes.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/
   - name: Prissättning
@@ -185,9 +187,9 @@ items:
     href: support-for-aml-services.md
   - name: Jämför våra ML-produkter
     href: overview-more-machine-learning.md
-ms.openlocfilehash: 041a4b0f3ebecdaedb041ceb25f426a6e1825292
-ms.sourcegitcommit: fcb674cc4e43ac5e4583e0098d06af7b398bd9a9
+ms.openlocfilehash: 5743da7a23f53fee32f1fe81ecc09212fccab7c5
+ms.sourcegitcommit: a4efc1d7fc4793bbff43b30ebb4275cd5c8fec77
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/18/2019
-ms.locfileid: "56338101"
+ms.lasthandoff: 02/21/2019
+ms.locfileid: "56650095"
