--- a/articles/sql-database/sql-database-managed-instance-index.yml
+++ b/articles/sql-database/sql-database-managed-instance-index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 287e4d63ca60200340a88dd45d6b8912a62b74cd
-ms.sourcegitcommit: 75fef8147209a1dcdc7573c4a6a90f0151a12e17
+ms.openlocfilehash: 92af534642f5e1d56209944a481e244b8cf6207a
+ms.sourcegitcommit: e88188bc015525d5bead239ed562067d3fae9822
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "56454708"
+ms.lasthandoff: 02/24/2019
+ms.locfileid: "56750109"
 documentType: LandingData
 title: Hanterad Azure SQL Database-instans
 metadata:
@@ -82,6 +82,7 @@ sections:
     - html: (Förhandsversion) <a href="https://aka.ms/managed-instance-tde-byok">Ta med era egna krypteringsnycklar</a> medan migrera lokala databaser som redan har aktiverat Transparent datakryptering (TDE).
     - html: Hanterade instanser är skyddade med <a href="sql-database-managed-instance-management-endpoint-verify-built-in-firewall.md">inbyggda brandväggen</a>.
     - html: (Förhandsversion) <a href="https://blogs.msdn.microsoft.com/sqlserverstorageengine/2019/01/21/recreate-dropped-database-on-azure-sql-managed-instance/">Återskapa släppas databaser</a>.
+    - html: Databasnamnet kan ändras med hjälp av sp_renamedb procedur eller ALTER DATABASE-instruktionen.
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
