--- a/articles/active-directory/b2b/index.yml
+++ b/articles/active-directory/b2b/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5ec95e9f1f91c31620644d3bd66118ed89337228
-ms.sourcegitcommit: 58dc0d48ab4403eb64201ff231af3ddfa8412331
+ms.openlocfilehash: 15c1e8af5e6df658ea24ce357aeeee711eaf9279
+ms.sourcegitcommit: 8ca6cbe08fa1ea3e5cdcd46c217cfdf17f7ca5a7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/26/2019
-ms.locfileid: "55078568"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "56673502"
 documentType: LandingData
 title: Dokumentation om Azure Active Directory B2B
 metadata:
   document_id: 
-  title: Dokumentation om Azure Active Directory B2B – självstudier, snabbstarter, begrepp, referenser | Microsoft Docs
-  description: Lär dig hur du använder B2B-gästanvändaråtkomst så att du på ett säkert sätt kan dela resurser och samarbeta med externa partner.
+  title: Dokumentation om Azure Active Directory B2B | Microsoft Docs
+  description: Använd våra självstudier, snabbstarter och instruktioner för att lära dig hur du använder B2B-gästanvändaråtkomst för att dela och samarbeta med externa partner.
   services: active-directory
   ms.subservice: authentication
   author: msmimart
@@ -41,10 +41,12 @@ sections:
     style: icon48
     items:
     - image:
+        alt: 
         src: ./media/index/i_security-management.png
       text: Lägga till gästanvändare i Azure Portal
       href: b2b-quickstart-add-guest-users-portal.md
     - image:
+        alt: 
         src: ./media/index/i_security-management.png
       text: Lägga till en gästanvändare med PowerShell
       href: b2b-quickstart-invite-powershell.md
