--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -73,7 +73,19 @@ items:
   - name: Skalning och värdtjänster
     href: functions-scale.md
   - name: Utlösare och bindningar
-    href: functions-triggers-bindings.md
+    items:
+    - name: Om utlösare och bindningar
+      href: functions-triggers-bindings.md
+    - name: Bindningsexempel
+      href: functions-bindings-example.md
+    - name: Registrera bindningstillägg
+      href: functions-bindings-register.md
+    - name: Binda uttrycksmönster
+      href: functions-bindings-expressions-patterns.md
+    - name: Använda bindningsreturvärden
+      href: functions-bindings-return-value.md
+    - name: Hantera bindningsfel
+      href: functions-bindings-errors.md
   - name: Språk
     items:
     - name: Språk som stöds
@@ -275,9 +287,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 88a0dc35c7a1d3836c21d237bc7a5b3c98555aec
-ms.sourcegitcommit: 943af92555ba640288464c11d84e01da948db5c0
+ms.openlocfilehash: 5f2fee7c298b505977742fd105fe6227fa2c2946
+ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/09/2019
-ms.locfileid: "55983584"
+ms.lasthandoff: 02/23/2019
+ms.locfileid: "56734616"
