--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -5,16 +5,12 @@ items:
   items:
   - name: Om Lab Services
     href: lab-services-overview.md
-  - name: Jämför labbtyper
-    href: compare-lab-types.md
+  - name: Om Classroom Labs
+    href: classroom-labs/classroom-labs-overview.md
+  - name: Om DevTest Labs
+    href: devtest-lab-overview.md
 - name: Självstudier
   items:
-  - name: DevTest Labs
-    items:
-    - name: 1. Konfigurera ett labb
-      href: tutorial-create-custom-lab.md
-    - name: 2. Åtkomst till ett labb
-      href: tutorial-use-custom-lab.md
   - name: Klassrumslabb
     items:
     - name: 1. Konfigurera ett labbkonto
@@ -25,6 +21,12 @@ items:
       href: classroom-labs/tutorial-connect-virtual-machine-classroom-lab.md
     - name: 4. Spåra användning av ett klassrumslabb
       href: classroom-labs/tutorial-track-usage.md
+  - name: DevTest Labs
+    items:
+    - name: 1. Konfigurera ett labb
+      href: tutorial-create-custom-lab.md
+    - name: 2. Åtkomst till ett labb
+      href: tutorial-use-custom-lab.md
 - name: Exempel
   items:
   - name: DevTest Labs
@@ -37,17 +39,26 @@ items:
       href: samples-cli.md
 - name: Begrepp
   items:
-  - name: DevTest Labs
-    href: devtest-lab-concepts.md
+  - name: Classroom Labs
     items:
-    - name: Använda labb för utvecklare
-      href: devtest-lab-developer-lab.md
-    - name: Använda labb för testmiljöer
-      href: devtest-lab-test-env.md
-    - name: Använda labb för utbildning
-      href: devtest-lab-training-lab.md
-    - name: Introduktion till DevTest Labs
-      href: devtest-lab-overview.md
+    - name: Classroom Labs-begrepp
+      href: classroom-labs/classroom-labs-concepts.md
+    - name: Scenarier
+      items:
+      - name: Använda labb i klasser
+        href: classroom-labs/classroom-labs-scenarios.md
+  - name: DevTest Labs
+    items:
+    - name: DevTest Labs-koncept
+      href: devtest-lab-concepts.md
+    - name: Scenarier
+      items:
+      - name: Använda labb för utvecklare
+        href: devtest-lab-developer-lab.md
+      - name: Använda labb för testmiljöer
+        href: devtest-lab-test-env.md
+      - name: Använda labb för utbildning
+        href: devtest-lab-training-lab.md
 - name: Instruktionsguider
   items:
   - name: Klassrumslabb
@@ -197,37 +208,47 @@ items:
       href: devtest-lab-use-arm-and-powershell-for-lab-resources.md
 - name: Referens
   items:
-  - name: CLI
-    href: /cli/azure/lab
-  - name: PowerShell
-    href: /powershell/module/az.devtestlabs/#devtest_labs
-  - name: REST-API
-    href: https://docs.microsoft.com/rest/api/dtl/
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.devtestlab/allversions
+  - name: Classroom Labs
+    items:
+    - name: REST-API
+      href: https://docs.microsoft.com/rest/api/labservices/
+  - name: DevTest Labs
+    items:
+    - name: CLI
+      href: /cli/azure/lab
+    - name: PowerShell
+      href: /powershell/module/azurerm.devtestlabs/#devtest_labs
+    - name: REST-API
+      href: https://docs.microsoft.com/rest/api/dtl/
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.devtestlab/allversions
 - name: Resurser
   items:
-  - name: Azure-översikt
-    href: https://azure.microsoft.com/roadmap/?category=developer-tools
-  - name: Priskalkylator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: DevTest Labs – vanliga frågor
-    href: devtest-lab-faq.md
-  - name: Tjänstuppdateringar
-    href: https://azure.microsoft.com/updates/?product=devtest-lab
-  - name: MSDN-forum
-    href: https://social.msdn.microsoft.com/Forums/home?forum=AzureDevTestLabs
-  - name: Teamblogg
-    href: https://blogs.msdn.microsoft.com/devtestlab/
-  - name: Stack Overflow
-    href: http://stackoverflow.com/questions/tagged/azure-devtest-labs
-  - name: Videoklipp
-    href: https://azure.microsoft.com/documentation/videos/index/?services=devtest-lab
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/devtest-lab/
-ms.openlocfilehash: 61d83d7d3e56abbb16e4d47dc1a7693707663c73
-ms.sourcegitcommit: 90c6b63552f6b7f8efac7f5c375e77526841a678
+  - name: Classroom Labs
+    items:
+    - name: Azure-uppdateringar
+      href: https://azure.microsoft.com/updates/?product=lab-services
+    - name: Prissättning
+      href: https://azure.microsoft.com/pricing/details/lab-services/
+    - name: Stack Overflow
+      href: https://stackoverflow.com/questions/tagged/azure-lab-services
+  - name: DevTest Labs
+    items:
+    - name: Azure-uppdateringar
+      href: https://azure.microsoft.com/updates/?product=devtest-lab
+    - name: Prissättning
+      href: https://azure.microsoft.com/pricing/details/devtest-lab/
+    - name: MSDN-forum
+      href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDevTestLabs
+    - name: Stack Overflow
+      href: https://stackoverflow.com/questions/tagged/azure-devtest-labs
+    - name: Videoklipp
+      href: https://azure.microsoft.com/resources/videos/index/?services=devtest-lab
+    - name: Vanliga frågor och svar
+      href: devtest-lab-faq.md
+ms.openlocfilehash: f4a7e26be0bbb15631fd44bf38506d564d27f331
+ms.sourcegitcommit: 7f7c2fe58c6cd3ba4fd2280e79dfa4f235c55ac8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/23/2019
-ms.locfileid: "56736753"
+ms.lasthandoff: 02/25/2019
+ms.locfileid: "56805697"
