--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -160,8 +160,12 @@ items:
       href: application-gateway-create-probe-ps.md
   - name: Felsöka
     items:
-    - name: Felsöka Application Gateway – ILB ASE
+    - name: Felsöka Application Gateway – Intern lastbalanserare (ILB) med App Service-miljön (ASE)
       href: create-gateway-internal-load-balancer-app-service-environment.md
+    - name: Felsöka Application Gateway med App Service – omdirigering till App Service-URL:en
+      href: troubleshoot-app-service-redirection-app-service-url.md
+    - name: Felsöka sessionstillhörighetsproblem i Azure Application Gateway
+      href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
     - name: Felsöka fel med felaktig gateway (502)
       href: application-gateway-troubleshooting-502.md
     - name: Diagnostik
@@ -202,9 +206,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Stack Overflow
     href: https://stackoverflow.com/questions/tagged/azure-application-gateway
-ms.openlocfilehash: ee7ccecec8784298759543d15bf326c507dc560c
-ms.sourcegitcommit: 8ca6cbe08fa1ea3e5cdcd46c217cfdf17f7ca5a7
+ms.openlocfilehash: 6e181ed44c473482c02c6fda6131f258838e9713
+ms.sourcegitcommit: 7f7c2fe58c6cd3ba4fd2280e79dfa4f235c55ac8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/22/2019
-ms.locfileid: "56674810"
+ms.lasthandoff: 02/25/2019
+ms.locfileid: "56807753"
