--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -172,7 +172,7 @@ items:
     - name: Kontinuerlig distribution med Chocolatey
       displayName: dsc, state configuration
       href: automation-dsc-cd-chocolatey.md
-    - name: Vidarebefordra rapportdata från Statuskonfiguration till Log Analytics
+    - name: Vidarebefordra rapportdata från State Configuration till Azure Monitor-loggar
       displayName: DSC
       href: automation-dsc-diagnostics.md
   - name: Hantera delade resurser
@@ -210,7 +210,7 @@ items:
       href: ../event-grid/ensure-tags-exists-on-new-virtual-machines.md?toc=%2fazure%2fautomation%2ftoc.json
   - name: Övervaka
     items:
-    - name: Vidarebefordra jobbdata från Azure Automation till Log Analytics
+    - name: Vidarebefordra jobbdata från Azure Automation till Azure Monitor-loggar
       href: automation-manage-send-joblogs-log-analytics.md
   - name: Migrera
     items:
@@ -285,9 +285,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-automation
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=automation
-ms.openlocfilehash: e35c51bb1d82f2c5eda708ab8bce71c2bf5b69b7
-ms.sourcegitcommit: 79038221c1d2172c0677e25a1e479e04f470c567
+ms.openlocfilehash: 01c80ffb961cf868d02b067402b7a168801ce88f
+ms.sourcegitcommit: 1516779f1baffaedcd24c674ccddd3e95de844de
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/19/2019
-ms.locfileid: "56417031"
+ms.lasthandoff: 02/26/2019
+ms.locfileid: "56819198"
