--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -131,7 +131,7 @@ items:
       href: deploy-container-networking.md
     - name: Virtuella datorer
       items:
-      - name: Skapa en virtuell dator med en statisk offentlig IP-adress
+      - name: Skapa virtuell dator – statisk offentlig IP-adress
         items:
         - name: Azure Portal
           href: virtual-network-deploy-static-pip-arm-portal.md
@@ -139,6 +139,8 @@ items:
           href: virtual-network-deploy-static-pip-arm-ps.md
         - name: Azure CLI
           href: virtual-network-deploy-static-pip-arm-cli.md
+      - name: Lägga till offentliga IP-adresser till en befintlig virtuell dator
+        href: associate-public-ip-address-vm.md
       - name: Skapa virtuell dator – statisk privat IP-adress
         items:
         - name: Azure Portal
@@ -364,9 +366,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-virtual-network
   - name: VANLIGA FRÅGOR OCH SVAR
     href: virtual-networks-faq.md
-ms.openlocfilehash: 42aca03869443ea240fb86279509b7345cd9549a
-ms.sourcegitcommit: 95822822bfe8da01ffb061fe229fbcc3ef7c2c19
+ms.openlocfilehash: 1b795c794e40c8933e1f4e24ac0f52598e8206d7
+ms.sourcegitcommit: 7f7c2fe58c6cd3ba4fd2280e79dfa4f235c55ac8
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55228720"
+ms.lasthandoff: 02/25/2019
+ms.locfileid: "56805349"
